--- a/templates/agents.html
+++ b/templates/agents.html
@@ -17,7 +17,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="agentModalLabel">Agent</h5>
+        <h5 class="modal-title" id="agentModalLabel">Add Agent</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body" id="agent-modal-body">
