--- a/templates/jobs.html
+++ b/templates/jobs.html
@@ -13,6 +13,9 @@
     <a href="{{ url_for('add_bulk_jobs') }}" class="btn btn-primary btn-lg">
       <i class="bi bi-list-ul me-1"></i>Create Bulk Jobs
     </a>
+    <a href="{{ url_for('add_bulk_jobs') }}" class="btn btn-primary btn-lg">
+      <i class="bi bi-file-earmark-arrow-up me-1"></i>Upload Bulk Jobs 
+    </a>
   </div>
 </div>
 <div class="card shadow-sm mb-4">
